--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from tanzila-yaseen11.github.io/Shoes_Landing/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 29 Aug 2024 04:36:56 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +24,7 @@
             <li><a href="#">MENU</a></li>
             <li><a href="#">LOCATION</a></li>
             <li><a href="#">ABOUT</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">CONTACT</a></li
             <li><a href="#" class="btn-2">Login</a></li>
         </ul>
         <ul>
@@ -43,7 +41,7 @@
     <section class="hero">
         <div class="hero-text">
             <h1 data-aos="zoom-in-left" data-aos-duartion="14000" data-aos-delay="200">YOUR FEET <br> DESERVE <br>THE BEST</h1>
-            <p data-aos="fade-right" data-aos-duartion="14000" data-aos-delay="300">YOUR FEET DESERVE THE BEST AND WE'RE HERE TO HELP YOU WITH OUR SHOES.YOUR FEET DESERVE THE BEST AND WE'RE HERE TO HELP YOU WITH OUR SHOES.</p>
+            <p data-aos="fade-right" data-aos-duartion="14000" data-aos-delay="300">YOUR FEET DESERVE THE BEST AND WE'RE HERE TO HELP YOU WITH OUR SHOES.</p>
             <div class="main-hero" data-aos="flip-down" data-aos-duartion="14000" data-aos-delay="400">
                 <a href="#" class="btn">Shop Now</a>
                 <a href="#" class="btn-1">Category</a>
@@ -80,6 +78,4 @@
     });
   </script>
 </body>
-
-<!-- Mirrored from tanzila-yaseen11.github.io/Shoes_Landing/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 29 Aug 2024 04:36:59 GMT -->
 </html>
